<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_log_in"
        android:orderInCategory="99"
        android:title="@string/action_log_in"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        android:visible="true"
        app:showAsAction="never" />
</menu>