<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="com.example.amrfahim.capstoneproject.ui.SignUpActivity">

    <EditText
        android:id="@+id/email_edittext"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="41dp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/password_edittext"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email_edittext"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:password="true" />

    <EditText
        android:id="@+id/confirm_password_edittext"
        style="@style/EditTextStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password_edittext"
        android:layout_marginTop="30dp"
        android:hint="@string/confirm_password"
        android:password="true" />

    <Button
        android:id="@+id/signup_btn_signup"
        style="@style/LogInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/sign_up" />

</RelativeLayout>
